# video_analytics

./: MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
video_analytics/: __init__.py  wrapper.py
video_analytics/object_detector/models/: common.py  experimental.py
