[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video_analytics"
version = "0.1.0"
description = "Compiled video analytics package with YOLOv7 wrapper and bestfire.pt weights"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "Proprietary" }
requires-python = ">=3.8"
dependencies = [
    "torch>=1.8.0",
    "numpy",
]
